--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 ---
 theme :
-  name : uniremainia
+  name : html5up-strongly-typed
 ---
 {% include JB/setup %}
-{% include themes/uniremainia/default.html %}
+{% include themes/html5up-strongly-typed/default.html %}
