--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,6 @@
 ---
 theme :
-  name : uniremainia
-layout: default
+  name : html5up-strongly-typed
 ---
 {% include JB/setup %}
-{% include themes/uniremainia/page.html %}
+{% include themes/html5up-strongly-typed/page.html %}
