--- a/_includes/themes/html5up-strongly-typed/default.html
+++ b/_includes/themes/html5up-strongly-typed/default.html
@@ -139,33 +139,24 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><a href="#">I don’t want to say <strong>it’s the aliens</strong> ...<br />
-												but it’s the aliens.</a></h2>
+												<h2><a href="#">Apply to the University</a></h2>
 											</header>
-											<a href="#" class="image featured"><img src="{{ BASE_PATH }}/assets/images/pic04.jpg" alt="" /></a>
-											<h3>I mean isn't it possible?</h3>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-											Curabitur leo nibh, rutrum eu malesuada in, tristique at erat.</p>
+											<!-- <a href="#" class="image featured"><img src="{{ BASE_PATH }}/assets/images/pic04.jpg" alt="" /></a> -->
+											<h3>Because We Need You Now</h3>
+											<p>Any person who is currently working in a UK university who supports freedom of movement and access to European Research programs is welcome to apply. We also welcome Postdocs, Students and the full range of supporting staff in non-academic roles. After all it is the whole community of university in all its diversity that is important!</p>
+
 											<ul class="actions">
-												<li><a href="#" class="button icon fa-file">Continue Reading</a></li>
+												<li><a href="/apply.md" class="button icon fa-file">Apply now!</a></li>
 											</ul>
 										</article>
 
-									<!-- Post -->
+									<!-- Post --
 										<article class="box post">
 											<header>
-												<h2><a href="#">By the way, many thanks to <strong>regularjane</strong>
-												for these awesome demo photos</a></h2>
+												<h2><a href="#">Why Classical Latin is Important</a></h2>
 											</header>
 											<a href="#" class="image featured"><img src="{{ BASE_PATH }}/assets/images/pic05.jpg" alt="" /></a>
-											<h3>You should probably check out her work</h3>
+											<h3>All the reasons</h3>
 											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
 											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
 											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
@@ -177,18 +168,11 @@
 											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
 											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
 											Curabitur leo nibh, rutrum eu malesuada in, tristique at erat.</p>
-											<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat
-											Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit ligula
-											vel quam viverra sit amet mollis tortor congue. Sed quis mauris sit amet
-											magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada in,
-											tristique at erat. Curabitur leo nibh, rutrum eu malesuada  in, tristique
-											at erat lorem ipsum dolor sit amet lorem ipsum sed consequat magna
-											tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros consequat
-											magna tempus</p>
 											<ul class="actions">
 												<li><a href="#" class="button icon fa-file">Continue Reading</a></li>
 											</ul>
 										</article>
+										-->
 
 								</div>
 
@@ -204,7 +188,7 @@
 														<article class="box excerpt">
 															<header>
 																<span class="date">July 30</span>
-																<h3><a href="#">Just another post</a></h3>
+																<h3><a href="#">Featured Faculty: Cameron Neylon</a></h3>
 															</header>
 															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
 															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
@@ -217,35 +201,23 @@
 														<article class="box excerpt">
 															<header>
 																<span class="date">July 28</span>
-																<h3><a href="#">And another post</a></h3>
+																<h3><a href="#">Featured Faculty: Richard Littauer</a></h3>
 															</header>
 															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
 															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
 														</article>
 
 												</li>
-												<li>
 
-													<!-- Excerpt -->
-														<article class="box excerpt">
-															<header>
-																<span class="date">July 24</span>
-																<h3><a href="#">One more post</a></h3>
-															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
-														</article>
-
-												</li>
 											</ul>
 										</section>
 
-									<!-- Highlights -->
+									<!-- Highlights --
 										<section>
 											<ul class="divided">
 												<li>
 
-													<!-- Highlight -->
+													<!-- Highlight --
 														<article class="box highlight">
 															<header>
 																<h3><a href="#">Something of note</a></h3>
@@ -263,7 +235,7 @@
 												</li>
 												<li>
 
-													<!-- Highlight -->
+													<!-- Highlight --
 														<article class="box highlight">
 															<header>
 																<h3><a href="#">Something of less note</a></h3>
@@ -281,6 +253,7 @@
 												</li>
 											</ul>
 										</section>
+										-->
 
 								</div>
 
