--- a/_includes/themes/html5up-strongly-typed/page.html
+++ b/_includes/themes/html5up-strongly-typed/page.html
@@ -22,8 +22,8 @@
 					<div id="header" class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">University of Remainia</a></h1>
-							<p>The former world's leading insitution in British Culture studies</p>
+							<h1 id="logo"><a href="index.html">British Research in Europe</a></h1>
+							<p>The stories of why the European Union matters to British research</p>
 
 						<!-- Nav -->
 							<nav id="nav">
