--- a/_includes/themes/html5up-strongly-typed/default.html
+++ b/_includes/themes/html5up-strongly-typed/default.html
@@ -22,8 +22,8 @@
 					<div id="header" class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">University of Remainia</a></h1>
-							<p>The former world's leading insitution in British Culture studies</p>
+							<h1 id="logo"><a href="index.html">British Research in Europe</a></h1>
+							<p>The stories of why the European Union matters to British research</p>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -142,8 +142,9 @@
 												<h2><a href="#">Apply to the University</a></h2>
 											</header>
 											<!-- <a href="#" class="image featured"><img src="{{ BASE_PATH }}/assets/images/pic04.jpg" alt="" /></a> -->
-											<h3>Because We Need You Now</h3>
-											<p>Any person who is currently working in a UK university who supports freedom of movement and access to European Research programs is welcome to apply. We also welcome Postdocs, Students and the full range of supporting staff in non-academic roles. After all it is the whole community of university in all its diversity that is important!</p>
+											<h3>Because your stories can make a difference</h3>
+											<p>It is the stories of real researchers working in the UK, and the people who support them that will make a difference.</p>
+											<p>Any person who is currently working in a UK university, or from industry working with UK Universities, who supports freedom of movement and access to European Research programs is welcome to apply. We also welcome Postdocs, Students and the full range of supporting staff in non-academic roles. After all, it is the whole community of a university in all our diversity that is important!</p>
 
 											<ul class="actions">
 												<li><a href="/apply.md" class="button icon fa-file">Apply now!</a></li>
