--- a/_includes/themes/html5up-strongly-typed/default.html
+++ b/_includes/themes/html5up-strongly-typed/default.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strongly Typed by HTML5 UP</title>
+		<title>British Research in the EU</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="{{ BASE_PATH }}/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -33,27 +33,6 @@
 									<li><a class="icon fa-users" href="faculty.html"><span>Faculty</span></a></li>
 									<li><a class="icon fa-user-plus" href="apply.html"><span>Apply</span></a></li>
 									<li><a class="icon fa-question" href="no-but-seriously.html"><span>No, But Seriously</span></a></li>
-									<!-- <li>
-										<a href="#" class="icon fa-bar-chart-o"><span>Dropdown</span></a>
-										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
-											<li>
-												<a href="#">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
-										</ul>
-									</li>
-									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
-									<li><a class="icon fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
-									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
-									-->
 								</ul>
 							</nav>
 
