Renamed theme, moved footer

--- a/_layouts/faculty.html
+++ b/_layouts/faculty.html
@@ -1,6 +1,6 @@
 ---
 theme :
-  name : html5up-strongly-typed
+  name : brieu
 ---
 {% include JB/setup %}
-{% include themes/html5up-strongly-typed/faculty.html %}
+{% include themes/brieu/faculty.html %}
