Removed things, shortened padding

--- a/_includes/themes/brieu/footer.html
+++ b/_includes/themes/brieu/footer.html
@@ -3,18 +3,10 @@
             <div class="row">
               <div class="6u 12u(mobile)">
                 <section>
-                  <p>Lorem Ipsum</p>
+                  <p>Get in touch</p>
                   <div class="row">
                     <div class="6u 12u(mobile)">
                       <ul class="icons">
-                        <li class="icon fa-home">
-                          1234 Somewhere Road<br />
-                          Nashville, TN 00000<br />
-                          USA
-                        </li>
-                        <li class="icon fa-phone">
-                          (000) 000-0000
-                        </li>
                         <li class="icon fa-envelope">
                           <a href="#">info@untitled.tld</a>
                         </li>
