Moved index content to index file

--- a/_includes/themes/brieu/default.html
+++ b/_includes/themes/brieu/default.html
@@ -117,17 +117,7 @@
 
 									<!-- Post -->
 										<article class="box post">
-											<header>
-												<h2><a href="#">Apply to the University</a></h2>
-											</header>
-											<!-- <a href="#" class="image featured"><img src="{{ BASE_PATH }}/assets/images/pic04.jpg" alt="" /></a> -->
-											<h3>Because your stories can make a difference</h3>
-											<p>It is the stories of real researchers working in the UK, and the people who support them that will make a difference.</p>
-											<p>Any person who is currently working in a UK university, or from industry working with UK Universities, who supports freedom of movement and access to European Research programs is welcome to apply. We also welcome Postdocs, Students and the full range of supporting staff in non-academic roles. After all, it is the whole community of a university in all our diversity that is important!</p>
-
-											<ul class="actions">
-												<li><a href="/apply.md" class="button icon fa-file">Apply now!</a></li>
-											</ul>
+											{{ content }}
 										</article>
 
 									<!-- Post --
