Fixed header link

--- a/_includes/themes/brieu/faculty.html
+++ b/_includes/themes/brieu/faculty.html
@@ -22,7 +22,7 @@
           <div id="header" class="container">
 
             <!-- Logo -->
-              <h1 id="logo"><a href="index.html">British Research in Europe</a></h1>
+              <h1 id="logo"><a href="{{ BASE_URL }}/index.html">British Research in Europe</a></h1>
               <p>The stories of why the European Union matters to British research</p>
 
             <!-- Nav -->
