Made all images externally loaded

--- a/_includes/themes/brieu/faculty.html
+++ b/_includes/themes/brieu/faculty.html
@@ -45,7 +45,7 @@
 
               {% if page.image %}
               <div id="avatar" style="float: left; padding: 15px 20px 0px 0px; ">
-                <a href="{{ page.url }} " style="max-width: 200px;" class="image"><img src="{{ BASE_PATH }}/assets/images/faculty/{{ page.image }}" alt="{{ page.name }}" /></a>
+                <a href="{{ page.url }} " style="max-width: 200px;" class="image"><img src="{{ page.image }}" alt="{{ page.name }}" /></a>
               </div>
               {% endif %}
 
