Minor modifications to templates and workers and added faq properly

--- a/_includes/themes/brieu/post.html
+++ b/_includes/themes/brieu/post.html
@@ -32,7 +32,7 @@
 									<li><a class="icon fa-flask" href="research.html"><span>Research</span></a></li>
 									<li><a class="icon fa-users" href="faculty.html"><span>Faculty</span></a></li>
 									<li><a class="icon fa-user-plus" href="apply.html"><span>Apply</span></a></li>
-									<li><a class="icon fa-question" href="no-but-seriously.html"><span>No, But Seriously</span></a></li>
+								    <li><a class="icon fa-question" href="../../frequently-posed-questionsly.html"><span>Frequently Posed Questions</span></a></li>
 								</ul>
 							</nav>
 
