--- a/_includes/themes/brieu/footer.html
+++ b/_includes/themes/brieu/footer.html
@@ -15,7 +15,7 @@
                     <div class="6u 12u(mobile)">
                       <ul class="icons">
                         <li class="icon fa-twitter">
-                          <a href="#">@untitled-tld</a>
+                          <a href="https://twitter.com/ukresearchineu">@ukresearchineu</a>
                         </li>
                       </ul>
                     </div>
