--- a/_includes/themes/brieu/footer.html
+++ b/_includes/themes/brieu/footer.html
@@ -8,7 +8,7 @@
                     <div class="6u 12u(mobile)">
                       <ul class="icons">
                         <li class="icon fa-envelope">
-                          <a href="#">info@untitled.tld</a>
+                          <a href="mailto:admin@british-research-in.eu">admin@british-research-in.eu</a>
                         </li>
                       </ul>
                     </div>
