--- a/_includes/themes/brieu/footer.html
+++ b/_includes/themes/brieu/footer.html
@@ -26,7 +26,7 @@
           </div>
           <div id="copyright" class="container">
             <ul class="links">
-              <li>&copy; british-research-in.eu. All rights reserved.</li>
+              <li>&copy; 2016 Cameron Neylon and Richard Littauer. All rights reserved.</li>
             </ul>
           </div>
         </div>
