Adding header information
Should close 23, will need to be tested on merge

--- a/_includes/themes/brieu/page.html
+++ b/_includes/themes/brieu/page.html
@@ -1,18 +1,4 @@
-<!DOCTYPE HTML>
-<!--
-	Strongly Typed by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>British Research in the EU</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="{{ BASE_PATH }}/assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="{{BASE_PATH}}/assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/ie8.css" /><![endif]-->
-	</head>
+{% include themes/brieu/header.html %}
 	<body class="homepage">
 		<div id="page-wrapper">
 
