--- a/_includes/themes/brieu/footer.html
+++ b/_includes/themes/brieu/footer.html
@@ -30,3 +30,8 @@
             </ul>
           </div>
         </div>
+
+        <!--
+  Strongly Typed by HTML5 UP, html5up.net | @ajlkn. Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+  Edited heavily by @RichardLitt
+-->
