--- a/_includes/themes/brieu/footer.html
+++ b/_includes/themes/brieu/footer.html
@@ -26,7 +26,7 @@
           </div>
           <div id="copyright" class="container">
             <ul class="links">
-              <li>&copy; 2016 Cameron Neylon and Richard Littauer. All rights reserved.</li>
+              <li><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> &copy; 2016 Contributors.</li>
             </ul>
           </div>
         </div>
