Stop supporting ie8

--- a/_includes/themes/brieu/header.html
+++ b/_includes/themes/brieu/header.html
@@ -52,14 +52,7 @@
     <meta property="os:rcs_type" content="git" />
     <meta property="os:src" content="{{ site.git_remote }}" />
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!--[if lte IE 8]><script src="{{ BASE_PATH }}/assets/js/ie/html5shiv.js"></script><![endif]-->
+    <!-- CSS -->
     <link rel="stylesheet" href="{{BASE_PATH}}/assets/css/main.css" />
-    <!--[if lte IE 8]><link rel="stylesheet" href="{{ BASE_PATH }}/assets/css/ie8.css" /><![endif]-->
-
     <link rel="shortcut icon" href="{{ BASE_PATH }}/favicon.png">
   </head>
