Final changes to add affiliations to profiles and change 'apply' to 'add profile'

--- a/_includes/themes/brieu/faculty.html
+++ b/_includes/themes/brieu/faculty.html
@@ -41,7 +41,8 @@
                       <header>
                         <h2><a href="#">{{ page.title }} {{ page.name }}</a></h2>
                       </header>
-                      <h3>{{ page.department}}, {{ page.school}}</h3>
+                      <h3>{{ page.department }}
+                      {{ page.school }}</h3>
                       {% if page.tagline %}<h3>{{page.tagline}}</h3>{% endif %}
 
                       {{ content }}
